WebCore: HTML5 media elements do not fire waiting events correctly https://bugs.webkit.org/show_bug.cgi?id=28335

Patch by Albert J. Wong <ajwong@chromium.org> on 2009-08-20
Reviewed by David Levin.

Fire the waiting event before seeking, and fix a case where firing of
the seeked event is missed when the ready state is changed during
a seek.

Added video-waiting-seeking.html into manual tests because not
all platforms allow seeking into non-buffered ranges.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setReadyState): add support for
waiting event when seeking.
(WebCore::HTMLMediaElement::finishSeek): send seeked event
whenever seeking finishes.
(WebCore::HTMLMediaElement::mediaPlayerTimeChanged): dispatch to
new function.
* html/HTMLMediaElement.h:
* manual-tests/video-waiting-seeking.html: Added.

LayoutTests: HTML5 media elements do not fire waiting events correctly
https://bugs.webkit.org/show_bug.cgi?id=28335

Patch by Albert J. Wong <ajwong@chromium.org> on 2009-08-20
Reviewed by David Levin.

New manual test to check if waiting/seeking events are fired
when seeking into a non-buffered region.

* http/tests/media/video-throttled-load.cgi: Added.
* media/video-test.js:
(isInTimeRanges):

Canonical link: https://commits.webkit.org/39202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47619 268f45cc-cd09-0410-ab3c-d52691b4dbfc